--- a/index_libros.html
+++ b/index_libros.html
@@ -14,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="search.js"></script>  
+    <script type="text/javascript" src="libros_back.js"></script>  
     <style type="text/css">
         *{
             
@@ -36,15 +36,14 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href="index_main.html">Inicio</a></li>
                     <li class="nav-item "><a class="nav-link text-light" href="index_Motivacion.html">Motivacion</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="index_libros.html">Base de datos</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="index_libros.html">Libros</a></li>
                     <li class="nav-item"><a class="nav-link text-light" href="index_sugerencias.html">Sugerencias</a></li>
                     <li class="nav-item"><a class="nav-link text-light" href="index_cuenta.html">Mi cuenta</a></li>
 
                 </ul>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#menu"><span class="navbar-toggler-icon"></span></button>
-                <button class="btn btn-primary bg-white text-dark" type="button" data-toggle="modal" data-target="#modal_info">Login</button>
-                <!-- <button class="btn btn-primary bg-white text-dark" type="button" data-toggle="modal" data-target="#modal_info2">Registro</button>-->
-                <a class="btn btn-primary bg-white text-dark" href="index_registro.html">Registro</a>
+                <button class="btn btn-primary bg-white text-dark" type="button" data-toggle="modal" data-target="#modal_info" id="log">Login</button>
+                    <a class="btn btn-primary bg-white text-dark" href="index_registro.html" id="reg">Registro</a>
             </div>
             <!--<form action="index_main.html" class="form-inline"></form>-->
                 <input class="form-control" type="search" name="buscar" placeholder="Buscar" id="sbar" style="width: 300px;">
