Borrado de boton login cuando se esta loggeado

--- a/index_main.html
+++ b/index_main.html
@@ -71,7 +71,7 @@
                             <button class="btn btn-danger" data-dismiss="modal">Cerrar</button>
                         </div>
                     
-					<!-- footerr -->
+					<!-- footer -->
                         <div class="modal-footer">
                             <p class="text-left">Datos tratados bajo politica de seguridad</p>
                         </div>
